# succinctly

./: .gitignore  .yml  CHANGELOG.md  CLAUDE.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md
.claude/: settings.local.json
.claude/skills/: bit-optimization.md  optimization-patterns.md
.claude/skills/benchmark-docs/: SKILL.md
.claude/skills/bit-optimization/: SKILL.md
.claude/skills/commit-msg/: SKILL.md
.claude/skills/json-semi-indexing/: SKILL.md
.claude/skills/markdown-tables/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/simd-optimization/: SKILL.md
.claude/skills/skill-writing/: SKILL.md
.claude/skills/testing/: skill.md
.claude/skills/yaml-semi-indexing/: skill.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  links.yml
.omni-dev/: pr-guidelines.md
bench-compare/: README.md
benches/: balanced_parens.rs  dsv_bench.rs  dsv_profile.rs  elias_fano.rs  json_avx512_comparison.rs  json_escape_micro.rs  json_pipeline.rs  json_simd.rs  json_simd_common.rs  json_simd_cursor.rs  json_simd_full.rs  json_simd_indexing.rs  json_standard.rs  json_validate_bench.rs  neon_movemask.rs  pfsm_comparison.rs  pfsm_end_to_end.rs  pfsm_vs_scalar.rs  pfsm_vs_simd.rs  popcount_strategies.rs  rank_select.rs  yaml_anchor_micro.rs  yaml_bench.rs  yaml_transcode_micro.rs  yaml_type_stack_micro.rs  yq_comparison.rs  yq_select.rs
docs/: AVX512-VPOPCNTDQ-RESULTS.md  BETWEEN-AVX2-AND-AVX512.md  FAILED-OPTIMIZATIONS.md  OPTIMIZATION-SUMMARY.md  PERFORMANCE-OUTCOMES-SUMMARY.md  PFSM-INTEGRATION.md  PFSM-RESULTS.md  README.md  RECOMMENDED-OPTIMIZATIONS.md  UNDERSTANDING-DEFAULT-FEATURES.md  developer-guide.md  dsv-performance.md  dsv-port-plan.md  haskell-works.dot  haskell-works.md  implemented-optimizations.md  jq-comparison.md  jq-implementation-plan.md  optimization-opportunities.md  performance-analysis.md  plan-balanced-parens.md  plan-rank-select.md  rank-select-chatgpt.md  rank-select.md  rust-json-comparison.md  user-guide.md  yq-comparison.md
docs/architecture/: README.md  balanced-parens.md  bitvec.md  core-concepts.md  semi-indexing.md
docs/archive/: OPTIMIZATION-SUMMARY.md  README.md  avx512-vpopcntdq-results.md  implemented-optimizations.md  migration-summary.md  optimization-opportunities.md
docs/archive/haskell-works/: hw-dsv.md
docs/archive/optimizations/: SUMMARY.md  avx512-json-results.md  between-avx2-and-avx512.md  failed.md  performance-analysis.md  performance-outcomes-summary.md  recommended.md
docs/benchmarks/: README.md  cross-language.md  dsv.md  inventory.md  jq.md  json-validate.md  rust-parsers.md  rust-yaml-parsers.md  yq.md
docs/compliance/yaml/: 1.2.md
docs/getting-started/: README.md  examples.md  installation.md  quickstart.md
docs/guides/: README.md  benchmarking.md  cli.md  developer.md  release.md
docs/haskell-works/: bits-extra.md  hw-aeson.md  hw-bits.md  hw-dsv.md  hw-hspec-hedgehog.md  hw-json-simd.md  hw-json.md  hw-mquery.md  hw-prelude.md  hw-prim.md  hw-simd.md  hw-string-parse.md  hw-xml.md
docs/optimisations/: README.md  bit-manipulation.md  branchless.md  simd.md  state-machines.md  zero-copy.md
docs/optimizations/: README.md  access-patterns.md  cache-memory.md  end-positions.md  hierarchical-structures.md  history.md  lookup-tables.md  parallel-prefix.md  simd.md
docs/parsing/: README.md  dsv.md  json.md  yaml-succinct.md  yaml.md
docs/plan/: README.md  compact-index-investigation.md  dsv.md  generic-eval-refactor.md  jq-completeness.md  jq.md  m2-benchmark-improvements.md  optimization-docs-plan.md  simd-features.md  sve2-optimizations.md  yaml-index-post-compactrank.md  yq-implementation-plan.md  yq-memory-optimization.md  yq.md
docs/reference/: yq-language.md
examples/: size_comparison.rs  test_anchor.rs
scripts/: build.sh  compare-hashes.sh
src/: binary.rs  bitvec.rs  bp.rs  broadword.rs  lib.rs  popcount.rs  rank.rs  select.rs
src/bits/: elias_fano.rs  mod.rs  popcount.rs  rank.rs
src/dsv/: index.rs  mod.rs
src/dsv/simd/: avx2.rs  bmi2.rs  mod.rs  neon.rs  sse2.rs  sve2.rs
src/jq/: document.rs  eval.rs  eval_generic.rs  expr.rs  mod.rs  parser.rs  stream.rs  value.rs
src/json/: bit_writer.rs  light.rs  locate.rs  mod.rs  pfsm.rs  pfsm_optimized.rs  pfsm_tables.rs  simple.rs  simple_light.rs  standard.rs  validate.rs
src/json/simd/: avx2.rs  bmi2.rs  mod.rs  neon.rs  sse42.rs  sve2.rs  x86.rs
src/simd/: mod.rs  neon.rs  x86.rs
src/trees/: bp.rs  mod.rs
src/util/: broadword.rs
src/util/simd/: mod.rs  sve2.rs  x86.rs
src/yaml/: advance_positions.rs  end_positions.rs  error.rs  index.rs  light.rs  locate.rs  mod.rs  parser.rs
src/yaml/simd/: broadword.rs  mod.rs  neon.rs  x86.rs
tests/: bitread_tests.rs  bp_coverage_tests.rs  bp_properties.proptest-regressions  bp_properties.rs  cli_golden_tests.rs  jq_cli_tests.rs  jq_tests.rs  json_indexing_tests.rs  json_validate_tests.rs  pfsm_correctness.rs  properties.rs  property_tests.proptest-regressions  property_tests.rs  serde_tests.rs  simd_level_tests.rs  yaml_index_investigation2.rs  yaml_index_investigation3.rs  yaml_index_investigation4.rs  yaml_test_suite.rs  yq_cli_tests.rs
tests/snapshots/: cli_golden_tests__help_install_aliases.snap  cli_golden_tests__help_json.snap  cli_golden_tests__help_main.snap  cli_golden_tests__json_generate_100b_seed42.snap  cli_golden_tests__json_generate_comprehensive_1kb_seed42.snap  cli_golden_tests__version.snap
