[package]
name = "succinctly"
version = "0.1.0"
edition = "2021"
description = "High-performance succinct data structures for Rust"
license = "MIT"
repository = "https://github.com/rust-works/succinctly"
keywords = ["succinct", "bitvector", "rank", "select", "data-structures"]
categories = ["data-structures", "algorithms"]

[features]
default = ["std"]

# Enable std library (required for runtime CPU detection on x86_64)
# When enabled, JSON indexing automatically uses AVX2 on supported CPUs
# Users needing no_std can disable: default-features = false
std = []

# Popcount implementation strategies (mutually exclusive for benchmarking)
# If none specified, uses Rust's built-in count_ones() which auto-vectorizes

# Use explicit SIMD intrinsics (NEON on ARM, POPCNT on x86)
simd = []

# Use portable bitwise popcount (no intrinsics, good for comparison)
portable-popcount = []

# Enable serde serialization/deserialization
serde = ["dep:serde"]

# CLI tool features
cli = ["std", "clap", "rand", "rand_chacha", "anyhow", "serde_json", "memmap2", "atty"]

# Enable regex support in jq query language
regex = ["dep:regex"]

# Test features (not for production)
large-tests = []    # 1G bitvector tests (~125MB RAM)
huge-tests = []     # 5G bitvector tests (~625MB RAM)
mmap-tests = ["memmap2", "tempfile"]  # Memory-mapped tests

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
libm = "0.2"
memmap2 = { version = "0.9", optional = true }
tempfile = { version = "3.10", optional = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
regex = { version = "1.10", optional = true }

# CLI dependencies (optional, only for binary)
clap = { version = "4.5", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
atty = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"
insta = "1.34"
anyhow = "1.0"
tempfile = "3.10"

[[bench]]
name = "rank_select"
harness = false

[[bench]]
name = "json_simd"
harness = false

[[bench]]
name = "balanced_parens"
harness = false

[[bench]]
name = "neon_movemask"
harness = false

[[bench]]
name = "json_pipeline"
harness = false

[[bench]]
name = "popcount_strategies"
harness = false

[[bin]]
name = "succinctly"
path = "src/bin/succinctly/main.rs"
required-features = ["cli"]

[lib]
name = "succinctly"
path = "src/lib.rs"

[[bench]]
name = "pfsm_end_to_end"
harness = false

[[bench]]
name = "json_standard"
harness = false

