[package]
name = "succinctly"
version = "0.4.0"
edition = "2021"
authors = ["John Ky <newhoggy@gmail.com>"]
rust-version = "1.73.0"
description = "High-performance succinct data structures for Rust"
license = "MIT"
repository = "https://github.com/rust-works/succinctly"
homepage = "https://github.com/rust-works/succinctly"
documentation = "https://docs.rs/succinctly"
readme = "README.md"
keywords = ["succinct", "bitvector", "rank", "select", "data-structures"]
categories = ["data-structures", "algorithms"]
include = [
    "src/**/*",
    "benches/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[features]
default = ["std"]

# Enable std library (required for runtime CPU detection on x86_64)
# When enabled, JSON indexing automatically uses AVX2 on supported CPUs
# Users needing no_std can disable: default-features = false
std = []

# Popcount implementation strategies (mutually exclusive for benchmarking)
# If none specified, uses Rust's built-in count_ones() which auto-vectorizes

# Use explicit SIMD intrinsics (NEON on ARM, POPCNT on x86)
simd = []

# Use portable bitwise popcount (no intrinsics, good for comparison)
portable-popcount = []

# Enable serde serialization/deserialization
serde = ["dep:serde"]

# CLI tool features
cli = ["std", "clap", "rand", "rand_chacha", "anyhow", "serde_json", "memmap2", "atty", "md5", "serde", "ctrlc"]

# Enable regex support in jq query language
regex = ["dep:regex"]

# Test features (not for production)
large-tests = []    # 1G bitvector tests (~125MB RAM)
huge-tests = []     # 5G bitvector tests (~625MB RAM)
mmap-tests = ["memmap2", "tempfile"]  # Memory-mapped tests

# Use portable broadword (SWAR) instead of NEON for YAML parsing on ARM64.
# Useful for testing broadword performance vs NEON intrinsics.
broadword-yaml = []

# Use pure scalar (byte-by-byte) for YAML parsing. Disables all SIMD/broadword.
# Useful for benchmarking baseline scalar performance.
scalar-yaml = []

# Unified benchmark runner (succinctly bench list/run)
bench-runner = ["cli", "dep:chrono"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
indexmap = "2.2"
libm = "0.2"
memmap2 = { version = "0.9", optional = true }
tempfile = { version = "3.10", optional = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
regex = { version = "1.10", optional = true }

# CLI dependencies (optional, only for binary)
clap = { version = "4.5", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
atty = { version = "0.2", optional = true }
md5 = { version = "0.7", optional = true }
ctrlc = { version = "3.4", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1.0"
insta = "1.34"
anyhow = "1.0"
tempfile = "3.10"

[[bench]]
name = "rank_select"
harness = false

[[bench]]
name = "json_simd"
harness = false

[[bench]]
name = "balanced_parens"
harness = false

[[bench]]
name = "neon_movemask"
harness = false

[[bench]]
name = "json_pipeline"
harness = false

[[bench]]
name = "popcount_strategies"
harness = false

[[bin]]
name = "succinctly"
path = "src/bin/succinctly/main.rs"
required-features = ["cli"]

[lib]
name = "succinctly"
path = "src/lib.rs"

[[bench]]
name = "pfsm_vs_simd"
harness = false

[[bench]]
name = "pfsm_vs_scalar"
harness = false

[[bench]]
name = "jq_comparison"
harness = false

[[bench]]
name = "dsv_bench"
harness = false

[[bench]]
name = "yaml_bench"
harness = false

[[bench]]
name = "yq_comparison"
harness = false

[[bench]]
name = "yaml_type_stack_micro"
harness = false

[[bench]]
name = "yaml_anchor_micro"
harness = false

[[bench]]
name = "yaml_transcode_micro"
harness = false

[[bench]]
name = "yq_select"
harness = false

[[bench]]
name = "bp_select_micro"
harness = false

[[bench]]
name = "elias_fano"
harness = false
